--- a/app/src/main/res/layout/fragment_my_config.xml
+++ b/app/src/main/res/layout/fragment_my_config.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:attachToActivity="false"
-        app:title="我的" />
+        app:title="@string/my" />
 
     <LinearLayout
         android:id="@+id/pre_fragment"
