--- a/app/src/main/res/layout/view_book_page.xml
+++ b/app/src/main/res/layout/view_book_page.xml
@@ -10,6 +10,7 @@
 
     <LinearLayout
         android:id="@+id/top_bar"
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -30,6 +31,7 @@
 
     <io.legado.app.ui.widget.page.ContentTextView
         android:id="@+id/content_text_view"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -37,6 +39,7 @@
 
     <LinearLayout
         android:id="@+id/bottom_bar"
+        android:paddingBottom="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
