--- a/app/src/main/res/layout/dialog_file_chooser.xml
+++ b/app/src/main/res/layout/dialog_file_chooser.xml
@@ -9,10 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/btn_bg_press_2" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_path"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="24dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <View
         android:layout_width="match_parent"
