--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,8 @@
 
     <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert"/>
 
+    <style name="Spinner" parent="android:Theme.Holo.Light" />
+
     //**************************************************************System
     Style******************************************************************************//
 
