--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="book_type">
-        <item>文本</item>
-        <item>音频</item>
+        <item>@string/book_type_text</item>
+        <item>@string/book_type_audio</item>
     </string-array>
 
     <string-array name="tts_speech_per">
