--- a/app/src/main/res/layout/activity_audio_play.xml
+++ b/app/src/main/res/layout/activity_audio_play.xml
@@ -65,7 +65,8 @@
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:progressBackgroundTint="@color/md_dark_secondary" />
 
         <TextView
             android:id="@+id/tv_all_time"
