--- a/app/src/main/res/layout/activity_audio_play.xml
+++ b/app/src/main/res/layout/activity_audio_play.xml
@@ -46,6 +46,8 @@
         android:id="@+id/tv_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/md_white_1000"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/ll_player_progress" />
 
     <LinearLayout
