--- a/app/src/main/res/menu/read_book.xml
+++ b/app/src/main/res/menu/read_book.xml
@@ -81,6 +81,11 @@
             android:icon="@drawable/ic_toc"
             android:title="@string/book_info"
             app:showAsAction="never" />
+
+        <item
+            android:id="@+id/menu_page_key"
+            android:title="@string/custom_page_key"
+            app:showAsAction="never" />
     </group>
 
     <group android:id="@+id/menu_group_login">
