--- a/app/src/main/res/xml/pref_config_read.xml
+++ b/app/src/main/res/xml/pref_config_read.xml
@@ -26,4 +26,9 @@
         android:key="volumeKeyPageOnPlay"
         app:iconSpaceReserved="false" />
 
+    <Preference
+        android:key="customPageKey"
+        android:title="@string/custom_page_key"
+        app:iconSpaceReserved="false" />
+
 </androidx.preference.PreferenceScreen>
