--- a/app/src/main/res/layout/item_rss_article.xml
+++ b/app/src/main/res/layout/item_rss_article.xml
@@ -29,6 +29,7 @@
         android:text="@string/app_name"
         android:textSize="12sp"
         android:textStyle="italic"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/image_view" />
