--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -7,14 +7,14 @@
 
     <path
         android:fillColor="#5c6bc0"
-        android:pathData="M80,79.8c-11.27,0-26.13,6.53-26.13,6.53V50.4s14.7-6.53,29.4-6.53L80,79.8Z" />
+        android:pathData="M80.12,78.9c-11.09,0-25.73,6.43-25.73,6.43V50s14.48-6.43,29-6.43L80.12,78.9Z" />
     <path
         android:fillColor="#7986cb"
-        android:pathData="M27.73,79.8c11.27,0,26.14,6.53,26.14,6.53V50.4s-14.7-6.53-29.4-6.53L27.73,79.8Z" />
+        android:pathData="M28.66,78.9c11.1,0,25.73,6.43,25.73,6.43V50s-14.47-6.43-28.95-6.43L28.66,78.9Z" />
     <path
         android:fillColor="#ffb74d"
-        android:pathData="M40.8,34.07a13.07,13.07,0,1,0,26.13,0h0a13.07,13.07,0,0,0-26.13,0Z" />
+        android:pathData="M41.52,33.87a12.87,12.87,0,0,0,25.74,0h0a12.87,12.87,0,0,0-25.74,0Z" />
     <path
         android:fillColor="#ffb74d"
-        android:pathData="M81.63,66.73h1.64A1.54,1.54,0,0,0,84.9,65.1V58.57a1.55,1.55,0,0,0-1.63-1.64H81.63a4.9,4.9,0,1,0,0,9.8ZM26.1,56.93H24.47a1.55,1.55,0,0,0-1.64,1.64V65.1a1.55,1.55,0,0,0,1.64,1.63H26.1a4.9,4.9,0,0,0,0-9.8Z" />
+        android:pathData="M81.73,66h1.61A1.51,1.51,0,0,0,85,64.43V58a1.52,1.52,0,0,0-1.61-1.61H81.73a4.83,4.83,0,0,0,0,9.65ZM27.05,56.38H25.44A1.53,1.53,0,0,0,23.83,58v6.44A1.52,1.52,0,0,0,25.44,66h1.61a4.83,4.83,0,0,0,0-9.65Z" />
 </vector>
