--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -6,15 +6,42 @@
     android:viewportHeight="108">
 
     <path
-        android:fillColor="#5c6bc0"
-        android:pathData="M80.12,78.9c-11.09,0-25.73,6.43-25.73,6.43V50s14.48-6.43,29-6.43L80.12,78.9Z" />
+        android:fillColor="#fff"
+        android:pathData="M48.45,78.25c-3.33,0-6.68,0-10.31-0.13a9.71,9.71,0,0,1-5.69-1.49,6.34,6.34,0,0,1-2.72-6l0.18-34H75.58a2.21,2.21,0,0,1,2.38,2V76.36a2.24,2.24,0,0,1-0.7,1.4,2.29,2.29,0,0,1-1.68 0.58 Z" />
     <path
-        android:fillColor="#7986cb"
-        android:pathData="M28.66,78.9c11.1,0,25.73,6.43,25.73,6.43V50s-14.47-6.43-28.95-6.43L28.66,78.9Z" />
+        android:fillColor="#403f3f"
+        android:pathData="M76,79.33H36.23a1,1,0,0,1,0-2H76a1,1,0,0,0,1-1V38.59a1,1,0,0,0-1-1H36.23a1,1,0,0,1,0-2H76a3,3,0,0,1,3,3V76.37a3,3,0,0,1-3,3Zm0,0" />
+    <group>
+        <clip-path android:pathData="M 28.93 29.27 H 79 V 79.39 H 28.93 V 29.27 Z" />
+        <path
+            android:fillColor="#33abe3"
+            android:pathData="M36.23,30.29a6.33,6.33,0,0,0-6.32,6.32V72a6.32,6.32,0,1,1,12.64,0V36.61a6.33,6.33,0,0,0-6.32-6.32Zm0,0" />
+        <path
+            android:fillColor="#403f3f"
+            android:pathData="M43.55,72h-2A5.34,5.34,0,1,0,30.9,72h-2V36.61a7.31,7.31,0,0,1,14.62,0V72ZM36.23,31.27a5.34,5.34,0,0,0-5.33,5.34V67a7.29,7.29,0,0,1,10.67,0V36.61a5.35,5.35,0,0,0-5.34-5.34Zm0,0" />
+        <path
+            android:fillColor="#fff"
+            android:pathData="M29.91,72a6.32,6.32,0,0,0,6.32,6.32A6.34,6.34,0,0,1,29.91,72Zm0,0" />
+        <path
+            android:fillColor="#403f3f"
+            android:pathData="M36.23,79.33A7.32,7.32,0,0,1,28.92,72h2a5.33,5.33,0,0,0,5.33,5.33Zm0,0" />
+        <path
+            android:fillColor="#403f3f"
+            android:pathData="M36.23,79.33A7.31,7.31,0,1,1,43.54,72h-2a5.34,5.34,0,1,0-5.34,5.33Zm0,0" />
+    </group>
     <path
-        android:fillColor="#ffb74d"
-        android:pathData="M41.52,33.87a12.87,12.87,0,0,0,25.74,0h0a12.87,12.87,0,0,0-25.74,0Z" />
+        android:fillColor="#fff"
+        android:pathData="M66.78,58.49a1.71,1.71,0,1,0,1.71-1.71,1.72,1.72,0,0,0-1.71,1.71Zm0,0" />
     <path
-        android:fillColor="#ffb74d"
-        android:pathData="M81.73,66h1.61A1.51,1.51,0,0,0,85,64.43V58a1.52,1.52,0,0,0-1.61-1.61H81.73a4.83,4.83,0,0,0,0,9.65ZM27.05,56.38H25.44A1.53,1.53,0,0,0,23.83,58v6.44A1.52,1.52,0,0,0,25.44,66h1.61a4.83,4.83,0,0,0,0-9.65Z" />
+        android:fillColor="#29abe2"
+        android:pathData="M 72.22 40.72 L 72.22 40.72 Q 74.24 40.72 74.24 42.74 L 74.24 57.24 Q 74.24 59.26 72.22 59.26 L 72.22 59.26 Q 70.2 59.26 70.2 57.24 L 70.2 42.74 Q 70.2 40.72 72.22 40.72 Z" />
+    <path
+        android:fillColor="#29abe2"
+        android:pathData="M 63.88 41.59 L 63.88 41.59 Q 66.07 41.59 66.07 43.78 L 66.07 69.32 Q 66.07 71.51 63.88 71.51 L 63.88 71.51 Q 61.69 71.51 61.69 69.32 L 61.69 43.78 Q 61.69 41.59 63.88 41.59 Z" />
+    <path
+        android:fillColor="#29abe2"
+        android:pathData="M 55.82 41.59 L 55.82 41.59 Q 58.04 41.59 58.04 43.81 L 58.04 70.02 Q 58.04 72.24 55.82 72.24 L 55.82 72.24 Q 53.6 72.24 53.6 70.02 L 53.6 43.81 Q 53.6 41.59 55.82 41.59 Z" />
+    <path
+        android:fillColor="#29abe2"
+        android:pathData="M 47.91 41.59 L 47.92 41.59 Q 49.96 41.59 49.96 43.63 L 49.96 70.2 Q 49.96 72.24 47.92 72.24 L 47.91 72.24 Q 45.87 72.24 45.87 70.2 L 45.87 43.63 Q 45.87 41.59 47.91 41.59 Z" />
 </vector>
